--- a/web/attpcdaq/templates/daq/data_source_list.html
+++ b/web/attpcdaq/templates/daq/data_source_list.html
@@ -3,15 +3,22 @@
 
 {% block title %}Data Sources - AT-TPC DAQ{% endblock %}
 
-
 {% block body %}
     <div class="panel panel-default">
         <div class="panel-heading">
             <span>
-                <a class="btn btn-primary btn-xs pull-right" href="{% url 'daq/add_source' %}">
-                    <span class="glyphicon glyphicon-plus"></span> Add
-                </a>
                 <span>Data Sources</span>
+                <div class="pull-right">
+                    <a class="btn btn-primary btn-xs" href="{% url 'daq/add_source' %}">
+                        <span class="fa fa-plus"></span> Add
+                    </a>
+                    <a class="btn btn-default btn-xs">
+                        <span class="fa fa-upload"></span> Upload
+                    </a>
+                    <a class="btn btn-default btn-xs" href="{% url 'daq/download_datasource_list' %}">
+                        <span class="fa fa-download"></span> Download
+                    </a>
+                </div>
             </span>
         </div>
         <table class="table table-hover">
