Added data source list upload code.

--- a/web/attpcdaq/templates/daq/data_source_list.html
+++ b/web/attpcdaq/templates/daq/data_source_list.html
@@ -12,7 +12,7 @@
                     <a class="btn btn-primary btn-xs" href="{% url 'daq/add_source' %}">
                         <span class="fa fa-plus"></span> Add
                     </a>
-                    <a class="btn btn-default btn-xs">
+                    <a class="btn btn-default btn-xs" href="{% url 'daq/upload_datasource_list' %}">
                         <span class="fa fa-upload"></span> Upload
                     </a>
                     <a class="btn btn-default btn-xs" href="{% url 'daq/download_datasource_list' %}">
