Added basic method to view log files.

--- a/web/attpcdaq/templates/base.html
+++ b/web/attpcdaq/templates/base.html
@@ -38,6 +38,11 @@
                             <span class="fa fa-exclamation-triangle"></span> Error logs
                         </a>
                     </li>
+                    <li class="{% active request 'remote' %}">
+                        <a href="{% url 'daq/remote_status' %}">
+                            <span class="fa fa-tachometer"></span> Remote status
+                        </a>
+                    </li>
                     <li class=""><a><span class="fa fa-wrench"></span> Setup</a>
                         <ul class="nav nav-sidebar-subnav">
                             <li class="{% active request 'experiment_settings' %}"><a href="{% url 'daq/experiment_settings' %}">Experiment settings</a></li>
