--- a/web/attpcdaq/templates/daq/run_info_panel.html
+++ b/web/attpcdaq/templates/daq/run_info_panel.html
@@ -16,10 +16,10 @@
             <td id="run-title">
                 {{ latest_run.title }}
                 {% if latest_run %}
-                <a href="{% url 'daq/update_run_metadata' latest_run.pk %}">
-                    <span class="icon-btn fa fa-pencil" title="Edit" data-toggle="tooltip"
-                          data-placement="bottom"></span>
-                </a>
+{#                <a href="{% url 'daq/update_run_metadata' latest_run.pk %}">#}
+{#                    <span class="icon-btn fa fa-pencil" title="Edit" data-toggle="tooltip"#}
+{#                          data-placement="bottom"></span>#}
+{#                </a>#}
                 {% endif %}
             </td>
         </tr>
