--- a/web/attpcdaq/templates/daq/status_page/ecc_server_status_panel.html
+++ b/web/attpcdaq/templates/daq/status_page/ecc_server_status_panel.html
@@ -1,80 +1,71 @@
-{% load daq_model_tags %}
-
-<div class="panel panel-default" id="source-status-panel">
+<div class="panel panel-default" id="ecc-server-status-panel">
     <div class="panel-heading">
-        Data Source Status
+        ECC Server Status
     </div>
     <table class="table">
         <tr>
             <th>Name</th>
-            <th>CoBo Status</th>
-            <th>DAQ Status</th>
+            <th>State</th>
             <th>Selected Config</th>
             <th colspan="6">Controls</th>
         </tr>
-        {% for source in data_sources %}
+        {% for ecc_server in ecc_servers %}
             <tr>
-                <td>{{ source.name }}</td>
-                <td id="{{ source.name }}-status-cell" data-daq-source-id="{{ source.pk }}">
-                                <span class="label label-default" data-daq-source-id="{{ source.pk }}"
-                                      id="{{ source.name }}-status-label">
-                                    {{ source.get_state_display }}
+                <td>{{ ecc_server.name }}</td>
+                <td id="{{ ecc_server.name }}-status-cell" data-ecc-server-id="{{ ecc_server.pk }}">
+                                <span class="label label-default" data-ecc-server-id="{{ ecc_server.pk }}"
+                                      id="{{ ecc_server.name }}-status-label">
+                                    {{ ecc_server.get_state_display }}
                                 </span>
-                    <span class="fa fa-pulse fa-spinner" id="{{ source.name }}-status-spinner"
-                          data-daq-source-id="{{ source.pk }}"></span>
-                </td>
-                <td data-daq-source-id="{{ source.pk }}">
-                    <span class="label label-default" id="{{ source.name }}-daq-status"
-                          data-daq-source-id="{{ source.pk }}">
-                        {{ source.daq_status_string }}
-                    </span>
+                    <span class="fa fa-pulse fa-spinner" id="{{ ecc_server.name }}-status-spinner"
+                          data-ecc-server-id="{{ ecc_server.pk }}"></span>
                 </td>
                 <td>
-                    {{ source.selected_config }}
-                    <a href="{% url 'daq/choose_config' source.pk %}">
+                    {{ ecc_server.selected_config }}
+                    <a href="{% url 'daq/choose_config' ecc_server.pk %}">
                         <span class="icon-btn source-ctrl-btn fa fa-pencil" title="Choose" data-toggle="tooltip"
                               data-placement="bottom"></span>
                     </a>
                 </td>
                 <td width="35px" class="text-center">
                                 <span class="icon-btn source-ctrl-btn fa fa-server" title="Describe"
-                                      data-daq-state-target="{{ source.DESCRIBED }}"
-                                      data-daq-source-id="{{ source.pk }}" data-toggle="tooltip"
+                                      data-daq-state-target="{{ ecc_server.DESCRIBED }}"
+                                      data-ecc-server-id="{{ ecc_server.pk }}" data-toggle="tooltip"
                                       data-placement="bottom">
                                 </span>
                 </td>
                 <td width="35px" class="text-center">
                                 <span class="icon-btn source-ctrl-btn fa fa-link" title="Prepare"
-                                      data-daq-state-target="{{ source.PREPARED }}"
-                                      data-daq-source-id="{{ source.pk }}" data-toggle="tooltip"
+                                      data-daq-state-target="{{ ecc_server.PREPARED }}"
+                                      data-ecc-server-id="{{ ecc_server.pk }}" data-toggle="tooltip"
                                       data-placement="bottom">
                                 </span>
                 </td>
                 <td width="35px" class="text-center">
                                 <span class="icon-btn source-ctrl-btn fa fa-cog" title="Configure"
-                                      data-daq-state-target="{{ source.READY }}"
-                                      data-daq-source-id="{{ source.pk }}" data-toggle="tooltip"
+                                      data-daq-state-target="{{ ecc_server.READY }}"
+                                      data-ecc-server-id="{{ ecc_server.pk }}" data-toggle="tooltip"
                                       data-placement="bottom">
                                 </span>
                 </td>
                 <td width="35px" class="text-center">
                                 <span class="icon-btn source-ctrl-btn fa fa-play" title="Start"
-                                      data-daq-state-target="{{ source.RUNNING }}"
-                                      data-daq-source-id="{{ source.pk }}" data-toggle="tooltip"
+                                      data-daq-state-target="{{ ecc_server.RUNNING }}"
+                                      data-ecc-server-id="{{ ecc_server.pk }}" data-toggle="tooltip"
                                       data-placement="bottom">
                                 </span>
                 </td>
                 <td width="35px" class="text-center">
                                 <span class="icon-btn source-ctrl-btn fa fa-stop" title="Stop"
-                                      data-daq-state-target="{{ source.READY }}"
-                                      data-daq-source-id="{{ source.pk }}" data-toggle="tooltip"
+                                      data-daq-state-target="{{ ecc_server.READY }}"
+                                      data-ecc-server-id="{{ ecc_server.pk }}" data-toggle="tooltip"
                                       data-placement="bottom">
                                 </span>
                 </td>
                 <td width="35px" class="text-center">
                                 <span class="icon-btn source-ctrl-btn fa fa-repeat" title="Reset"
-                                      data-daq-state-target="{{ source.RESET }}"
-                                      data-daq-source-id="{{ source.pk }}" data-toggle="tooltip"
+                                      data-daq-state-target="{{ ecc_server.RESET }}"
+                                      data-ecc-server-id="{{ ecc_server.pk }}" data-toggle="tooltip"
                                       data-placement="bottom">
                                 </span>
                 </td>
@@ -116,9 +107,9 @@
     }
 
     // Updates the status of the source with the given id (pk)
-    function set_source_status(source_id, state_name, is_transitioning) {
-        var $label = $('[id*="status-label"][data-daq-source-id=' + source_id + ']');
-        var $spinner = $('[id*="status-spinner"][data-daq-source-id=' + source_id + ']');
+    function set_ecc_server_status(ecc_server_id, state_name, is_transitioning) {
+        var $label = $('[id*="status-label"][data-ecc-server-id=' + ecc_server_id + ']');
+        var $spinner = $('[id*="status-spinner"][data-ecc-server-id=' + ecc_server_id + ']');
 
         // Update the text and color of the status label
         set_label($label, state_name);
@@ -134,34 +125,16 @@
         }
     }
 
-    function set_source_daq_status(source_id, status, status_string) {
-        var $label = $('[id*="daq-status"][data-daq-source-id=' + source_id + ']');
-        $label.text(status_string);
-
-        $label.removeClass();
-        $label.addClass('label');
-        if (status == {% daq_state 'DAQ_RUNNING' %}) {
-            $label.addClass('label-running');
-        }
-        else if (status == {% daq_state 'DAQ_READY' %}) {
-            $label.addClass('label-ready');
-        }
-        else {
-            $label.addClass('label-error');
-        }
-    }
-
     // Tells a single source to perform a transition
     function change_state(pk, target) {
         return $.post("{% url 'daq/source_change_state' %}",
                 {pk: pk, target_state: target, csrfmiddlewaretoken: '{{ csrf_token }}'});
     }
 
-    // Make the source panel be updated when 'daq:refreshState' is fired
+    // Make the ECC server panel be updated when 'daq:refreshState' is fired
     $(document).on('daq:refreshState', function (event, data) {
-        $.each(data.individual_results, function(index, value) {
-            set_source_status(value.pk, value.state_name, value.transitioning);
-            set_source_daq_status(value.pk, value.daq_state, value.daq_state_string);
+        $.each(data.ecc_server_status_list, function(index, value) {
+            set_ecc_server_status(value.pk, value.state_name, value.transitioning)
         });
     });
 
