--- a/web/attpcdaq/templates/daq/data_source_list.html
+++ b/web/attpcdaq/templates/daq/data_source_list.html
@@ -7,7 +7,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             <span>
-                <span>Data Sources</span>
+                <span>Data sources</span>
                 <div class="pull-right">
                     <a class="btn btn-primary btn-xs" href="{% url 'daq/add_source' %}">
                         <span class="fa fa-plus"></span> Add
@@ -24,21 +24,15 @@
         <table class="table table-hover">
             <tr>
                 <th>Name</th>
-                <th>ECC server address</th>
-                <th>ECC server port</th>
-                <th>Data router address</th>
-                <th>Data router port</th>
-                <th>Data router type</th>
+                <th>ECC server</th>
+                <th>Data router</th>
                 <th></th>
             </tr>
             {% for source in datasource_list %}
             <tr>
                 <td>{{ source.name }}</td>
-                <td>{{ source.ecc_ip_address|default:'None' }}</td>
-                <td>{{ source.ecc_port|default:'None' }}</td>
-                <td>{{ source.data_router_ip_address|default:'None' }}</td>
-                <td>{{ source.data_router_port|default:'None' }}</td>
-                <td>{{ source.data_router_type }}</td>
+                <td>{{ source.ecc_server|default:'None' }}</td>
+                <td>{{ source.data_router|default:'None' }}</td>
                 <td class="text-right">
                     <a role="button" class="btn btn-xs btn-default"
                        href="{% url 'daq/update_source' source.pk %}">
