--- a/web/attpcdaq/templates/base.html
+++ b/web/attpcdaq/templates/base.html
@@ -49,6 +49,7 @@
                             <li class="{% active request 'ecc_servers' %}"><a href="{% url 'daq/ecc_server_list' %}">ECC servers</a></li>
                             <li class="{% active request 'data_routers' %}"><a href="{% url 'daq/data_router_list' %}">Data routers</a></li>
                             <li class="{% active request 'sources' %}"><a href="{% url 'daq/data_source_list' %}">Data sources</a></li>
+                            <li class="{% active request 'easy_setup' %}"><a href="{% url 'daq/easy_setup' %}">Easy setup</a></li>
                         </ul>
                     </li>
                 </ul>
