Moved remote log buttons to status page.
The remote status page had become redundant.

--- a/web/attpcdaq/templates/daq/status_page/data_router_status_panel.html
+++ b/web/attpcdaq/templates/daq/status_page/data_router_status_panel.html
@@ -7,6 +7,7 @@
             <th>Name</th>
             <th>Online</th>
             <th>Clean</th>
+            <th>Logs</th>
         </tr>
         {% for router in data_routers %}
             <tr>
@@ -24,6 +25,11 @@
                     {% else %}
                         <span class="fa fa-times-circle text-danger"></span>
                     {% endif %}
+                </td>
+                <td>
+                    <a href="{% url 'daq/show_log' 'data_router' router.pk %}">
+                        <span class="icon-btn fa fa-search"></span>
+                    </a>
                 </td>
             </tr>
         {% endfor %}
