Added Observable, Measurement models and CRUD views.

--- a/web/attpcdaq/templates/base.html
+++ b/web/attpcdaq/templates/base.html
@@ -41,10 +41,11 @@
                     <li class=""><a><span class="fa fa-wrench"></span> Setup</a>
                         <ul class="nav nav-sidebar-subnav">
                             <li class="{% active request 'experiment_settings' %}"><a href="{% url 'daq/experiment_settings' %}">Experiment settings</a></li>
+                            <li class="{% active request 'easy_setup' %}"><a href="{% url 'daq/easy_setup' %}">Easy setup</a></li>
                             <li class="{% active request 'ecc_servers' %}"><a href="{% url 'daq/ecc_server_list' %}">ECC servers</a></li>
                             <li class="{% active request 'data_routers' %}"><a href="{% url 'daq/data_router_list' %}">Data routers</a></li>
                             <li class="{% active request 'sources' %}"><a href="{% url 'daq/data_source_list' %}">Data sources</a></li>
-                            <li class="{% active request 'easy_setup' %}"><a href="{% url 'daq/easy_setup' %}">Easy setup</a></li>
+                            <li class="{% active request 'observables' %}"><a href="{% url 'daq/observables_list' %}">Observables</a></li>
                         </ul>
                     </li>
                 </ul>
