Added config_name and run_class fields to RunMetadata.

--- a/web/attpcdaq/templates/daq/run_metadata_list.html
+++ b/web/attpcdaq/templates/daq/run_metadata_list.html
@@ -17,25 +17,37 @@
         <table class="table table-hover">
             <tr>
                 <th>Run number</th>
+                <th>Type</th>
                 <th>Run title</th>
+                <th>Config used</th>
                 <th>Start</th>
                 <th>Stop</th>
                 <th>Duration</th>
                 <th></th>
             </tr>
             {% for run in runmetadata_list %}
-            <tr>
-                <td>{{ run.run_number }}</td>
-                <td>{{ run.title }}</td>
-                <td>{{ run.start_datetime|date:'d-M-Y H:i:s' }}</td>
-                <td>{{ run.stop_datetime|date:'d-M-Y H:i:s' }}</td>
-                <td>{{ run.duration }}</td>
-                <td class="text-right">
-                    <a class="btn btn-xs btn-default" href="{% url 'daq/update_run_metadata' run.pk %}">
-                        <span class="fa fa-wrench"></span> Edit
-                    </a>
-                </td>
-            </tr>
+                {% if run.run_class == run.PRODUCTION %}
+                    <tr class="success">
+                {% elif run.run_class == run.TESTING %}
+                    <tr class="warning">
+                {% elif run.run_class == run.JUNK %}
+                    <tr class="danger">
+                {% else %}
+                    <tr>
+                {% endif %}
+                    <td>{{ run.run_number }}</td>
+                    <td>{{ run.get_run_class_display }}</td>
+                    <td>{{ run.title }}</td>
+                    <td>{{ run.config_name }}</td>
+                    <td>{{ run.start_datetime|date:'d-M-Y H:i:s' }}</td>
+                    <td>{{ run.stop_datetime|date:'d-M-Y H:i:s' }}</td>
+                    <td>{{ run.duration }}</td>
+                    <td class="text-right">
+                        <a class="btn btn-xs btn-default" href="{% url 'daq/update_run_metadata' run.pk %}">
+                            <span class="fa fa-wrench"></span> Edit
+                        </a>
+                    </td>
+                </tr>
             {% endfor %}
         </table>
     </div>
